@@ -1,3 +1,12 @@
+2011-01-10  Adam Roben  <aroben@apple.com>
+
+        Roll out r75289
+
+        It was causing assertion failures. See <http://webkit.org/b/52156>.
+
+        * wtf/StackBounds.cpp:
+        (WTF::StackBounds::initialize):
+
 2011-01-08  Patrick Gansterer  <paroga@webkit.org>
 
         Reviewed by Darin Adler.
